array.island.Island.scala.error
Compilation error:
Island:10: error: Boolean does not take parameters
    else (num(i)>=num(i+1)) {
                            ^